# hyena

./: .gitignore  LICENCE.md  Makefile  README.md  pyproject.toml
examples/: counter-tpl.py  counter.py  jump.py  simple-bis.py  simple.json  simple.py
hyena/: __init__.py  __main__.py  draw.py  ena.py  pygen.py  reach.py  simul.py
mini/: mini.json  mini.py
